updated full page

--- a/color_task.html
+++ b/color_task.html
@@ -135,7 +135,7 @@
             <div class="bodyuser">
                 <div class="userprofile">
                     <div class="user">
-                        <img src="images/logo.png" alt="logo">
+                        <img src="images/logo.png" alt="logo" class="logo">
                         <div class="name_designation">
                             <span class="name">Your Name</span>
                             <span class="designation">UI DEVELOPER</span>
