--- a/color_task.html
+++ b/color_task.html
@@ -34,31 +34,31 @@
 
                 <div class="menu_options" data-content-id="heading">
                     <div class="heading_options">
-                        <div class="background_options">
+                        <div>
                             <input type="text" class="background_color">
                             Background color
                         </div>
-                        <div class="text_options">
+                        <div>
                             <input type="text" class="menutext_color">
                             Menu text color
                         </div>
                     </div>
                     <div class="profile_options">
-                        <div class="name_options">
+                        <div>
                             <input type="text" class="name_color">
                             Your Name
                         </div>
-                        <div class="designation_options">
+                        <div>
                             <input type="text" class="designation_color">
                             Designation
                         </div>
                     </div>
                     <div class="contact_options">
-                        <div class="contact_button_color">
+                        <div>
                             <input type="text" class="contactbutton_color">
                             Contact button color
                         </div>
-                        <div class="contact_text_color">
+                        <div>
                             <input type="text" class="contacttext_color">
                             Contact button text color
                         </div>
@@ -69,31 +69,31 @@
 
                 <div class="asidebar_options" data-content-id="sidebar">
                     <div class="heading_options">
-                        <div class="getin_touch">
+                        <div>
                             <input type="text" class="getin_touch_button_color">
                             Get in Touch button color
                         </div>
-                        <div class="text_options">
+                        <div>
                             <input type="text" class="getin_touch_text_color">
                             Get in Touch text color
                         </div>
                     </div>
                     <div class="website_options">
-                        <div class="website_button">
+                        <div>
                             <input type="text" class="website_button_color">
                             Website button color
                         </div>
-                        <div class="website_text">
+                        <div>
                             <input type="text" class="website_text_color">
                             Website text color
                         </div>
                     </div>
                     <div class="phoneno_options">
-                        <div class="phoneno_text_color">
+                        <div>
                             <input type="text" class="phoneno_color">
                             Phone # color
                         </div>
-                        <div class="aside_color">
+                        <div>
                             <input type="text" class="asidebar_color">
                             Sidebar color
                         </div>
@@ -104,27 +104,27 @@
 
                 <div class="mainbody_options" data-content-id="mainbody">
                     <div class="profile_background_options">
-                        <div class="profile_background_options">
+                        <div>
                             <input type="text" class="profile_background_color">
                             Profile Background color
                         </div>
-                        <div class="profile_text_options">
+                        <div>
                             <input type="text" class="body_menutext_color">
                             Profile text color
                         </div>
                     </div>
                     <div class="profile_button_options">
-                        <div class="profilebutton_options">
+                        <div>
                             <input type="text" class="profile_button_color">
                             Profile button color
                         </div>
-                        <div class="designation_options">
+                        <div>
                             <input type="text" class="profile_text_color">
                             Profile button text color
                         </div>
                     </div>
                     <div class="profile_hyperlink">
-                        <div class="profile_hyperlink_color">
+                        <div>
                             <input type="text" class="hyperlink_color">
                             Hyperlink color
                         </div>
@@ -132,7 +132,7 @@
                 </div>
 
             </header>
-            <div class="bodyuser">
+            <div class="profile_section">
                 <div class="userprofile">
                     <div class="user">
                         <img src="images/logo.png" alt="logo" class="logo">
@@ -173,11 +173,11 @@
                                 to use a passage of Lorem Ipsum,
                             </p>
                             <div class="contrary">
-                                <img src="images/bodyprofile.png" alt="bodyprofile">
+                                <img src="images/bodyprofile.png" alt="bodyprofile" class="bodyprofile_img">
                                 <div class="contrary_details">
                                     <h2 class="contrary_title">Contrary to popular belief</h2>
                                     <p class="contrary_details_para">
-                                        contrary to popular belief,Lorem Ipsum
+                                        Contrary to popular belief,Lorem Ipsum
                                         is not simply random text.It has roots in a piece of Classical
                                         Latin from 45 BC,making it over 2000 years old.Richard McClintock,a
                                     </p>
@@ -189,11 +189,11 @@
                     </div>
                     <div class="aside">
                         <div class="aside_profile">
-                            <div class="profile_details">
+                            <div>
                                 <img src="images/asideprofile.png" alt="asideprofile" class="asideprofile_img">
                                 <div class="profile">Your Name</div>
                                 <div class="profile">Company Name</div>
-                                <div class="profile">Designation</div>
+                                <div class="profile">Designations</div>
                             </div>
                             <div class="mobileno">123-234-2112</div>
                             <div class="userhelpbutton">
@@ -213,6 +213,7 @@
     </div>
     <script src="js/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
+    <!-- <script src="js/spectrum.js"></script> -->
     <script src="js/color_task.js"></script>
 </body>
 
