--- a/color_task.html
+++ b/color_task.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color picker</title>
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.css">
+    <link rel="stylesheet" type="text/css" href="css/spectrum.css">
     <link rel="stylesheet" href="css/color_task.css">
 </head>
 
@@ -143,7 +142,7 @@
                     </div>
                     <ul class="user_menu">
                         <li class="contact_me">
-                            <a href="javascript:;">Contact me</a>
+                            <a href="javascript:;" class="contact">Contact me</a>
                         </li>
                         <li class="user_option">
                             <a href="javascript:;">Home</a>
@@ -212,8 +211,7 @@
         </div>
     </div>
     <script src="js/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.8.0/spectrum.min.js"></script>
-    <!-- <script src="js/spectrum.js"></script> -->
+    <script src="js/spectrum.js"></script>
     <script src="js/color_task.js"></script>
 </body>
 
